# rust-helper

./: LICENSE  README.md  index.html  package-lock.json  package.json
.beads/: issues.jsonl
.github/workflows/: ci.yml  release.yml
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  build_rs_cov.profraw  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/commands/: config.rs  mod.rs
src-tauri/src/parsers/: json.rs  mod.rs  text.rs  toml.rs  xml.rs
src/components/: GearSpinner.tsx  LoadingScreen.tsx  ProjectCard.tsx  Sidebar.tsx  index.ts
src/types/: index.ts
src/utils/: formatting.ts
